# ska-bf-switch-exporter

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
ansible/: README.md  galaxy.yml
ansible/roles/p4_switch_exporter/defaults/: main.yml
ansible/roles/p4_switch_exporter/handlers/: main.yml
ansible/roles/p4_switch_exporter/tasks/: main.yml  preflight.yml
ansible/roles/p4_switch_exporter/templates/: ska-p4-switch-exporter.service.j2
ansible/roles/xrt_fpga_exporter/defaults/: main.yml
ansible/roles/xrt_fpga_exporter/handlers/: main.yml
ansible/roles/xrt_fpga_exporter/tasks/: main.yml  preflight.yml
ansible/roles/xrt_fpga_exporter/templates/: ska-xrt-fpga-exporter.service.j2
docs/src/: conf.py  index.rst
docs/src/exporters/: index.rst  p4_switch_exporter.rst  xrt_fpga_exporter.rst
docs/src/fpga_exporter/: index.rst
docs/src/installation/: ansible.rst  pip.rst
docs/src/p4_switch_exporter/: index.rst
docs/src/xrt_fpga_exporter/: index.rst
src/ska_bf_switch_exporter/: collectors.py  exporter.py  pal_rpc_collector.py  platform_manager_collector.py  pltfm_mgr_rpc_collector.py  release.py  rpc_collector.py
src/ska_fpga_exporter/: cli.py  collectors.py  release.py
src/ska_p4_switch_exporter/: cli.py  collectors.py  exporter_info_collector.py  port_collector.py  qsfp_collector.py  release.py  rpc_collector_base.py  system_collector.py
src/ska_xrt_fpga_exporter/: cli.py  collectors.py  exporter_info_collector.py  release.py  xrt_fpga_collector.py
tests/: conftest.py  dummy_test.py
tests/p4_switch_exporter/: conftest.py  exporter_info_collector_test.py  pal_rpc_collector_test.py  pal_rpc_mock.py  pltfm_mgr_rpc_collector_test.py  pltfm_mgr_rpc_mock.py  port_collector_test.py  qsfp_collector_test.py  system_collector_test.py
tests/test_data/xrt_devices/: README.md
tests/test_data/xrt_devices/0/: bdf  electrical  name  platform  thermal  xclbin_uuid
tests/test_data/xrt_devices/1/: bdf  dynamic_regions  electrical  host  mechanical  pcie_info  platform  thermal  xclbin_uuid
tests/xrt_fpga_exporter/: conftest.py  exporter_info_collector_test.py  pyxrt_mock.py  xrt_fpga_collector_test.py
thrift/: README.md
